# EasyGram

./: README.md  pyproject.toml  readme.md  requirements.txt  setup.py
EasyGram/: __init__.py  readme.md  setup.py  types.py  whatsnew.md
EasyGram/Async/: __init__.py  types.py
EasyGram/imitation/: __init__.py
EasyGram/imitation/static/: script.js  styles.css
EasyGram/imitation/templates/: index.html
